@@ -1,105 +1,278 @@
 package com.linkspark.service;
 
+import com.linkspark.domain.Team;
+import com.linkspark.domain.TeamInvite;
+import com.linkspark.domain.TeamMember;
 import com.linkspark.domain.User;
 import com.linkspark.dto.TeamDtos;
-import com.linkspark.model.TeamMember;
+import com.linkspark.repository.TeamInviteRepository;
+import com.linkspark.repository.TeamMemberRepository;
 import com.linkspark.repository.TeamRepository;
 import lombok.RequiredArgsConstructor;
+import org.springframework.http.HttpStatus;
 import org.springframework.security.core.Authentication;
 import org.springframework.stereotype.Service;
-import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.server.ResponseStatusException;
 
+import jakarta.transaction.Transactional;
+import java.time.Instant;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
-
-import static org.springframework.http.HttpStatus.*;
 
 @Service
 @RequiredArgsConstructor
 public class TeamService {
 
     private final TeamRepository teamRepo;
+    private final TeamMemberRepository memberRepo;
+    private final TeamInviteRepository inviteRepo;
     private final UserService userService;
 
+    // -----------------------------------------
+    // CREATE TEAM
+    // -----------------------------------------
     @Transactional
-    public void invite(Authentication auth, TeamDtos.InviteRequest req) {
+    public Team createTeam(Authentication auth, TeamDtos.CreateTeamRequest req) {
         User owner = (User) auth.getPrincipal();
 
-        teamRepo.findByOwnerAndEmail(owner, req.email()).ifPresent(existing -> {
-            throw new ResponseStatusException(BAD_REQUEST, "Invite already exists");
-        });
+        Team team = new Team();
+        team.setName(req.name());
+        team.setOwner(owner);
 
-        TeamMember member = new TeamMember();
-        member.setOwner(owner);
-        member.setEmail(req.email().toLowerCase());
-        member.setRole(req.role());
-        member.setPending(true);
+        teamRepo.save(team);
 
-        teamRepo.save(member);
+        // Owner must also be stored in TeamMember
+        TeamMember ownerMember = new TeamMember();
+        ownerMember.setTeam(team);
+        ownerMember.setUser(owner);
+        ownerMember.setEmail(owner.getEmail());
+        ownerMember.setRole("owner");
+        ownerMember.setPending(false);
 
+        memberRepo.save(ownerMember);
+
+        return team;
     }
 
-    public List<TeamDtos.TeamMemberDto> list(Authentication auth) {
-        User owner = (User) auth.getPrincipal();
-        return teamRepo.findByOwner(owner).stream()
+    // -----------------------------------------
+    // GET TEAM INFO + MEMBERS
+    // -----------------------------------------
+    public TeamDtos.TeamDto getTeam(UUID teamId) {
+        Team team = teamRepo.findById(teamId)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND));
+
+        List<TeamMember> members = memberRepo.findByTeam(team);
+
+        List<TeamDtos.TeamMemberDto> list = members.stream()
                 .map(m -> new TeamDtos.TeamMemberDto(
                         m.getId().toString(),
-                        m.getEmail(),
+                        // userId can be null for pending invites
+                        m.getUser() != null ? m.getUser().getId().toString() : null,
+                        // show name if user exists; otherwise fallback to email
+                        m.getUser() != null ? m.getUser().getName() : m.getEmail(),
+                        m.getUser() != null ? m.getUser().getEmail() : m.getEmail(),
                         m.getRole(),
                         m.isPending()
                 ))
-                .collect(Collectors.toList());
+                .toList();
+
+        return new TeamDtos.TeamDto(team.getId().toString(), team.getName(), list);
     }
 
+    // -----------------------------------------
+    // INVITE MEMBER
+    // -----------------------------------------
     @Transactional
-    public void remove(Authentication auth, UUID memberId) {
-        User owner = (User) auth.getPrincipal();
-        TeamMember member = teamRepo.findById(memberId)
-                .orElseThrow(() -> new ResponseStatusException(NOT_FOUND, "Member not found"));
+    public void inviteUser(Authentication auth, UUID teamId, TeamDtos.InviteRequest req) {
+        User inviter = (User) auth.getPrincipal();
 
-        if (!member.getOwner().getId().equals(owner.getId())) {
-            throw new ResponseStatusException(FORBIDDEN, "Not your workspace");
-        }
+        Team team = teamRepo.findById(teamId)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND));
 
-        if ("owner".equalsIgnoreCase(member.getRole())) {
-            throw new ResponseStatusException(BAD_REQUEST, "Cannot remove owner");
-        }
+        // Only owner/admin can invite
+        TeamMember inv = memberRepo.findByTeamAndUser(team, inviter)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.FORBIDDEN));
 
-        teamRepo.delete(member);
+        if (!inv.getRole().equals("owner") && !inv.getRole().equals("admin"))
+            throw new ResponseStatusException(HttpStatus.FORBIDDEN);
+
+        String email = req.email().toLowerCase();
+
+        // Prevent duplicate pending member
+        memberRepo.findByTeamAndEmail(team, email).ifPresent(existing -> {
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Member or invite already exists");
+        });
+
+        // create invite token
+        TeamInvite invite = new TeamInvite();
+        invite.setTeam(team);
+        invite.setEmail(email);
+        invite.setRole(req.role());
+        invite.setToken(UUID.randomUUID().toString());
+        invite.setExpiresAt(Instant.now().plusSeconds(86400)); // 24 hrs
+
+        inviteRepo.save(invite);
+
+        // create a pending TeamMember row so frontend can show pending invites immediately
+        TeamMember pendingMember = new TeamMember();
+        pendingMember.setTeam(team);
+        pendingMember.setUser(null); // no user yet
+        pendingMember.setEmail(email);
+        pendingMember.setRole(req.role());
+        pendingMember.setPending(true);
+
+        memberRepo.save(pendingMember);
     }
 
+    // -----------------------------------------
+    // ACCEPT INVITE
+    // -----------------------------------------
     @Transactional
-    public void changeRole(Authentication auth, UUID memberId, TeamDtos.ChangeRoleRequest req) {
-        User owner = (User) auth.getPrincipal();
-        TeamMember member = teamRepo.findById(memberId)
-                .orElseThrow(() -> new ResponseStatusException(NOT_FOUND, "Member not found"));
-
-        if (!member.getOwner().getId().equals(owner.getId())) {
-            throw new ResponseStatusException(FORBIDDEN, "Not your workspace");
-        }
-
-        member.setRole(req.role());
-        teamRepo.save(member);
-    }
-
-    @Transactional
-    public void acceptInvite(Authentication auth, String ownerEmail) {
+    public void acceptInvite(Authentication auth, String token) {
         User user = (User) auth.getPrincipal();
 
-        User owner = userService.findByEmail(ownerEmail)
-                .orElseThrow(() -> new ResponseStatusException(NOT_FOUND, "Owner not found"));
+        TeamInvite invite = inviteRepo.findByToken(token)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND));
 
-        TeamMember member = teamRepo.findByOwnerAndEmail(owner, user.getEmail())
-                .orElseThrow(() -> new ResponseStatusException(NOT_FOUND, "Invite not found"));
+        if (invite.getExpiresAt().isBefore(Instant.now()))
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Invite expired");
 
-        if (!member.isPending()) {
-            throw new ResponseStatusException(BAD_REQUEST, "Already accepted");
+        // Find the pending TeamMember row by team + email
+        TeamMember pending = memberRepo.findByTeamAndEmail(invite.getTeam(), invite.getEmail())
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Pending membership not found"));
+
+        // attach user and mark as active
+        pending.setUser(user);
+        pending.setPending(false);
+        pending.setEmail(user.getEmail()); // keep email consistent (optional)
+
+        memberRepo.save(pending);
+
+        // remove invite
+        inviteRepo.delete(invite);
+    }
+
+    // -----------------------------------------
+    // REMOVE MEMBER
+    // -----------------------------------------
+    @Transactional
+    public void removeMember(Authentication auth, UUID teamId, UUID memberId) {
+        User requester = (User) auth.getPrincipal();
+
+        Team team = teamRepo.findById(teamId)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND));
+
+        TeamMember reqMember = memberRepo.findByTeamAndUser(team, requester)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.FORBIDDEN));
+
+        if (!reqMember.getRole().equals("owner") && !reqMember.getRole().equals("admin"))
+            throw new ResponseStatusException(HttpStatus.FORBIDDEN);
+
+        TeamMember target = memberRepo.findById(memberId)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND));
+
+        if (target.getRole().equals("owner"))
+            throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Cannot remove owner");
+
+        memberRepo.delete(target);
+    }
+
+    // -----------------------------------------
+    // CHANGE ROLE
+    // -----------------------------------------
+    @Transactional
+    public void changeRole(Authentication auth, UUID teamId, UUID memberId, TeamDtos.ChangeRoleRequest req) {
+        User requester = (User) auth.getPrincipal();
+
+        Team team = teamRepo.findById(teamId)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND));
+
+        TeamMember reqMember = memberRepo.findByTeamAndUser(team, requester)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.FORBIDDEN));
+
+        if (!reqMember.getRole().equals("owner"))
+            throw new ResponseStatusException(HttpStatus.FORBIDDEN);
+
+        TeamMember target = memberRepo.findById(memberId)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND));
+
+        target.setRole(req.role());
+        memberRepo.save(target);
+    }
+
+    // -----------------------------------------
+    // GET TEAMS USER BELONGS TO (SUMMARY)
+    // -----------------------------------------
+    public List<TeamDtos.TeamSummaryDto> getMyTeams(Authentication auth) {
+        User user = (User) auth.getPrincipal();
+
+        List<TeamMember> memberships = memberRepo.findByUser(user);
+
+        return memberships.stream()
+                .map(m -> new TeamDtos.TeamSummaryDto(
+                        m.getTeam().getId().toString(),
+                        m.getTeam().getName(),
+                        m.getRole()
+                ))
+                .toList();
+    }
+
+    @Transactional
+    public Team updateTeam(Authentication auth, UUID teamId, TeamDtos.CreateTeamRequest req) {
+        User requester = (User) auth.getPrincipal();
+
+        Team team = teamRepo.findById(teamId)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND));
+
+        // Only owner can rename team
+        if (!team.getOwner().getId().equals(requester.getId())) {
+            throw new ResponseStatusException(HttpStatus.FORBIDDEN, "Only owner can rename team");
         }
 
-        member.setPending(false);
-        teamRepo.save(member);
-    }
-}
+        team.setName(req.name());
+        teamRepo.save(team);
 
+        return team;
+    }
+
+    @Transactional
+    public void deleteTeam(Authentication auth, UUID teamId) {
+        User requester = (User) auth.getPrincipal();
+
+        Team team = teamRepo.findById(teamId)
+                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND));
+
+        // Only owner can delete
+        if (!team.getOwner().getId().equals(requester.getId())) {
+            throw new ResponseStatusException(HttpStatus.FORBIDDEN, "Only owner can delete team");
+        }
+
+        // Delete all members first
+        List<TeamMember> members = memberRepo.findByTeam(team);
+        memberRepo.deleteAll(members);
+
+        // Delete invites
+        inviteRepo.deleteAll(inviteRepo.findAll()); // If needed you can filter by team
+
+        teamRepo.delete(team);
+    }
+
+    public List<TeamDtos.InviteInfo> getMyInvites(Authentication auth) {
+        User user = (User) auth.getPrincipal();
+
+        List<TeamInvite> invites = inviteRepo.findByEmail(user.getEmail());
+
+        return invites.stream()
+                .map(inv -> new TeamDtos.InviteInfo(
+                        inv.getToken(),
+                        inv.getTeam().getId().toString(),
+                        inv.getTeam().getName(),
+                        inv.getRole(),
+                        inv.getExpiresAt().toString()
+                ))
+                .toList();
+    }
+
+
+
+}
